force-app/main/default/objects/Account/fields/Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field__c</fullName>
    <formula>25</formula>
    <label>Custom Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>