force-app/main/default/objects/Account/fields/Custom_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Formula_Field__c</fullName>
    <formula>TODAY()</formula>
    <label>Custom Formula Field</label>
    <type>Date</type>
</CustomField>