force-app/main/default/objects/Account/fields/Days_From_Today__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Today__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <label>Days From Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>