force-app/main/default/objects/Account/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created__c</fullName>
    <inlineHelpText>This field calculates the number of days since the account was created</inlineHelpText>
    <label>Days Since Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>