force-app/main/default/objects/Account/fields/Eight_Days_From_Today__c.field-meta.xml
<CustomField>
    <fullName>Eight_Days_From_Today__c</fullName>
    <formula>TODAY() + 8</formula>
    <label>Eight Days From Today</label>
    <type>Date</type>
</CustomField>