force-app/main/default/objects/Account/fields/First_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Date__c</fullName>
    <inlineHelpText>This field will store the date of the first order made by the account.</inlineHelpText>
    <label>First Order Date</label>
    <type>Date</type>
</CustomField>