force-app/main/default/objects/Account/fields/Four_Days_From_Today__c.field-meta.xml
<CustomField>
    <fullName>Four_Days_From_Today__c</fullName>
    <formula>TODAY() + 4</formula>
    <label>Four Days From Today</label>
    <type>Date</type>
</CustomField>