force-app/main/default/objects/Account/fields/Hello_Date__c.field-meta.xml
<CustomField>
    <fullName>Hello_Date__c</fullName>
    <formula>TODAY()</formula>
    <label>Hello Date</label>
    <type>Date</type>
</CustomField>