force-app/main/default/objects/Account/fields/New_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Formula_Field__c</fullName>
    <formula>TODAY()</formula>
    <label>New Formula Field</label>
    <type>Date</type>
</CustomField>