force-app/main/default/objects/Account/fields/Next_11_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_11_Days__c</fullName>
    <formula>TODAY() + 11</formula>
    <label>Next 11 Days</label>
    <type>Date</type>
</CustomField>