force-app/main/default/objects/Account/fields/Next_17_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_17_Days__c</fullName>
    <formula>TODAY() + 17</formula>
    <label>Next 17 Days</label>
    <type>Date</type>
</CustomField>