force-app/main/default/objects/Account/fields/Next_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_3_Days__c</fullName>
    <formula>TODAY() + 3</formula>
    <label>Next 3 Days</label>
    <type>Date</type>
</CustomField>