force-app/main/default/objects/Account/fields/Next_Five_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_Five_Days__c</fullName>
    <formula>TODAY() + 5</formula>
    <label>Next Five Days</label>
    <type>Date</type>
</CustomField>