force-app/main/default/objects/Account/fields/Next_Six_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_Six_Days__c</fullName>
    <formula>TODAY() + 6</formula>
    <label>Next Six Days</label>
    <type>Date</type>
</CustomField>