force-app/main/default/objects/Account/fields/Seven_Days_From_Today__c.field-meta.xml
<CustomField>
    <fullName>Seven_Days_From_Today__c</fullName>
    <formula>TODAY() + 7</formula>
    <label>Seven Days From Today</label>
    <type>Date</type>
</CustomField>