force-app/main/default/objects/Account/fields/Today_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Date__c</fullName>
    <formula>TODAY()</formula>
    <label>Today Date</label>
    <type>Date</type>
</CustomField>