force-app/main/default/objects/Account/fields/Tomorrow_Date__c.field-meta.xml
<CustomField>
    <fullName>Tomorrow_Date__c</fullName>
    <formula>TODAY() + 1</formula>
    <label>Tomorrow Date</label>
    <type>Date</type>
</CustomField>