force-app/main/default/objects/Account/validationRules/Contact_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Name_Validation</fullName>
    <active>true</active>
    <description>Validation rule to check if the name of the contact is at least 7 characters</description>
    <errorConditionFormula>LEN(Billing_Contact_Name__c) &lt; 7</errorConditionFormula>
    <errorMessage>The name of the contact must be at least 7 characters</errorMessage>
</ValidationRule>