force-app/main/default/objects/Account/validationRules/PrimaryOwnerMediaRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryOwnerMediaRequired</fullName>
    <active>true</active>
    <description>Primary Owner Media is required</description>
    <errorConditionFormula>ISBLANK(Primary_Owner_Media__c)</errorConditionFormula>
    <errorMessage>Primary Owner Media is required</errorMessage>
</ValidationRule>